添加物理设备剩余CU和内存两个指标
